--- a/src/routes/Appointments/appointments.css
+++ b/src/routes/Appointments/appointments.css
@@ -1,11 +1,26 @@
-* {
-    box-sizing: border-box;
-  }
-  
-  .main-text {
-    margin: 30px 50px 30px 50px;
-  }
-  
-  .times {
-    margin: 0 0 0 60px;
+h2 {
+  font-size: 24px;
+  margin: 30px;
+}
+
+.allappts {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.appt{
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0px 11px 21px -8px rgba(0, 0, 0, 0.5);
+  margin: 20px;
+  padding: 20px;
+  background-color: white;
+  border: 1px solid black;
+}
+
+p {
+  font-size: 24px;
+  padding: 10px 0 10px 0;
   }
