--- a/src/routes/SetAppointment/setappointment.css
+++ b/src/routes/SetAppointment/setappointment.css
@@ -1,22 +1,23 @@
-.main-text {
-    margin: 30px 50px 30px 50px;
-  }
+
+.setApptH2 {
+  font-size: 24px;
+  text-align: center;
+  margin: 30px 30px 30px 0px;
+}
   
 .calendar {
   text-align: center;
   margin: 0 auto;
-  padding: 20px 0 0 0;
-  max-width: 70%;
+  padding: 20px;
+  max-width: 90%;
+  max-width: 400px;
+  background-color: white;
   border: 1px solid black;
-  font-size: 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0px 11px 21px -8px rgba(0, 0, 0, 0.5);
 }
 
 .react-calendar {
   margin: 0 auto;
 }
 
-.picktime {
-  text-align: center;
-  margin: 0 0 0 0;
-  border: 1px solid red;
-}
