--- a/src/routes/SetAppointment/setappointment.css
+++ b/src/routes/SetAppointment/setappointment.css
@@ -1,10 +1,21 @@
 
-.setApptH2 {
-  font-size: 24px;
-  text-align: center;
-  margin: 30px 30px 30px 0px;
-}
+.set-appointment {
+  background-image: url('../../images/donnie-rosie-taO2fC7sxDU-unsplash.jpg');
+  min-height: 1500px;
+  margin: 0;
+  position: relative;
+  opacity: 0.8;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   
+  text-align: center;
+}
+
+.calendar-container {
+  padding: 15px;
+}
+
 .calendar {
   text-align: center;
   margin: 0 auto;
@@ -19,5 +30,17 @@
 
 .react-calendar {
   margin: 0 auto;
+}
+
+.calendarImage {
+  display: inline-block;
+  width: 100%;
+  height: 400px;
+  border: 1px solid black;
+
+  background-image: url('../../images/zell-8157pheMi-I-unsplash.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
